# ros-perception

./: README.md
datasets/: data.yaml
datasets/labels/: train.cache  val.cache
datasets/labels/train/: -2025-12-16-3-37-19_png.rf.9ffb61ca1c878daa9ca69403d543b165.txt  -2025-12-16-3-37-31_png.rf.a6ca7e93cc4c8af1bdcf1456d9753f92.txt  -2025-12-16-3-41-37_png.rf.afe0d63d0f913d887d08e9eeac06d8d9.txt  -2025-12-16-3-41-41_png.rf.eb10e986ec47ba42a914f81a5a2e03f1.txt  -2025-12-16-3-41-45_png.rf.0793747ca73b358a816ef81e5e6b4da3.txt  -2025-12-16-3-43-16_png.rf.b5ff9188674768d431b82bb1c2eecf50.txt  -2025-12-16-3-43-31_png.rf.5e1d5760cacf144ebb7281af03c57bf3.txt  -2025-12-16-3-43-33_png.rf.42375698f58a71e7a05283792c138f36.txt  -2025-12-16-3-43-35_png.rf.aafa583ffbb7ff5389cb40fcaeafb51d.txt  -2025-12-16-3-43-37_png.rf.c3e94ec50f6c1990c05360350d2348ad.txt  -2025-12-16-3-43-55_png.rf.1f91dc85999c225dd1c6248ce055fe3f.txt  -2025-12-16-3-44-05_png.rf.da79fe40ca3a84f82e9e3d818fffd067.txt  -2025-12-16-3-44-11_png.rf.aa3dbfe588d0d71b8576b8454f50db3a.txt  -2025-12-16-3-44-15_png.rf.bdf1e9de776c6de375c9d57b3f23d132.txt
experiments/hotdog_pizza_ft/: args.yaml  results.csv
scripts/: finetune_pizza.py  train.py  validate.py
src/perception/: package.xml  setup.py
src/perception/launch/: perception_launch.py
src/perception/perception/: perception_node.py
