<?xml version="1.0"?>
<package format="3">
  <name>perception</name>
  <version>0.0.1</version>
  <description>Perception package for object detection, localization, and bark action.</description>
  <maintainer email="jenifer7933@snu.ac.kr">Suyeon Woo</maintainer>
  <license>Apache-2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>ament_python</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>ament_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>